Deployment/shadow/prod-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primary-app
  labels:
    app: my-app
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
      version: v1
  template:
    metadata:
      labels:
        app: my-app
        version: v1
    spec:
      containers:
      - name: my-app
        image: nginx:latest  # Production version
        ports:
        - containerPort: 80
