Deployment/shadow/shadow-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shadow-app
  labels:
    app: my-app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v2
  template:
    metadata:
      labels:
        app: my-app
        version: v2
    spec:
      containers:
      - name: my-app
        image: shruti786/todo:micro  # Shadow version
        ports:
        - containerPort: 80
