Deployment/shadow/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-app
spec:
  host: my-app
  subsets:
  - name: stable         # Stable version subset (v1.0)
    labels:
      version: a
  - name: shadow         # Shadow version subset (v2.0)
    labels:
      version: b
